helm/unraid-ingress/overseer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseer-ingress
  namespace: unraid-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" # Remark this entry if you only have a HTTP port connection to external webserver
spec:
  rules:
  - host: overseer.hamzilla.lan	
    http:
      paths:
      - path: /
        pathType: Prefix  # pathType no longer has a default value in v1; "Exact", "Prefix", or "ImplementationSpecific" must be specified
        backend:
          service:
            name: overseer-svc # make sure this is same service name as in the service yaml
            port:
              number: 5055
